test/sema/immutable-member-mutation.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

struct X: Copyable {
    let a: int;

    init(a: int) {
        this.a = a;
    }
}

func main() {
    var x = X(5);
    // CHECK: [[@LINE+1]]:8: error: cannot decrement immutable value
    x.a--;
}
